--- a/src/content/graphos/basics/explorer/connecting-authenticating.mdx
+++ b/src/content/graphos/basics/explorer/connecting-authenticating.mdx
@@ -39,7 +39,7 @@ Headers can include the values of [environment variables](#environment-variables
 
 <img
   class="screenshot"
-  src="../img/explorer-headers.jpg"
+  src="../../img/explorer-headers.jpg"
   alt="Setting Explorer headers with environment variables"
   width="500"
 />
@@ -68,7 +68,7 @@ You define environment variables in the Explorer's Settings tab, like so:
 
 <img
   class="screenshot"
-  src="../img/explorer-environment-variables.jpg"
+  src="../../img/explorer-environment-variables.jpg"
   alt="Setting Explorer environment variables"
   width="400"
 />
@@ -89,7 +89,7 @@ Inject an environment variable into an HTTP header value by surrounding the vari
 
 <img
   class="screenshot"
-  src="../img/explorer-use-environment-variable.jpg"
+  src="../../img/explorer-use-environment-variable.jpg"
   alt="Setting Explorer headers with environment variables"
   width="400"
 />
@@ -100,7 +100,7 @@ Inject an environment variable into a GraphQL variable value by surrounding the 
 
 <img
   class="screenshot"
-  src="../img/explorer-environment-variables-graphql-variables.png"
+  src="../../img/explorer-environment-variables-graphql-variables.png"
   alt="Setting Explorer graphql variables with environment variables"
   width="600"
 />
@@ -152,7 +152,7 @@ To create a preflight script:
 
    <img
      class="screenshot"
-     src="../img/preflight-script.png"
+     src="../../img/preflight-script.png"
      alt="Preflight script settings in the Explorer"
      width="500"
    />
@@ -161,7 +161,7 @@ To create a preflight script:
 
    <img
      class="screenshot"
-     src="../img/preflight-script-edit.jpg"
+     src="../../img/preflight-script-edit.jpg"
      alt="Editing preflight scripts in the Explorer"
      width="600"
    />
@@ -180,7 +180,7 @@ By default, a variant's preflight script runs automatically before every GraphQL
 
 <img
   class="screenshot"
-  src="../img/preflight-script-disable.png"
+  src="../../img/preflight-script-disable.png"
   alt="Disabling preflight scripts in the Explorer"
   width="500"
 />
@@ -200,7 +200,7 @@ To do so, toggle the switch to **OFF**.
 
    <img
      class="screenshot"
-     src="../img/select-operation.png"
+     src="../../img/select-operation.png"
      alt="Selecting an operation"
      width="400"
    />
@@ -209,7 +209,7 @@ To do so, toggle the switch to **OFF**.
 
    <img
      class="screenshot"
-     src="../img/script-tab-new.png"
+     src="../../img/script-tab-new.png"
      alt="Adding a new operation script"
      width="500"
    />
@@ -218,7 +218,7 @@ To do so, toggle the switch to **OFF**.
 
     <img
      class="screenshot"
-     src="../img/op-script-modal.png"
+     src="../../img/op-script-modal.png"
      alt="Editing operation scripts in the Explorer"
      width="600"
     />
@@ -233,7 +233,7 @@ By default, operation scripts are **disabled** for each individual user. Users c
 
 <img
   class="screenshot"
-  src="../img/op-switch.png"
+  src="../../img/op-switch.png"
   alt="Editing operation scripts in the Explorer"
   width="500"
 />
