--- a/src/content/graphos/basics/explorer/index.mdx
+++ b/src/content/graphos/basics/explorer/index.mdx
@@ -14,8 +14,8 @@ The Explorer is free for all Apollo Studio organizations. It supports all GraphQ
 To get started with the Explorer, [create a graph](../quickstart/cloud/#2-create-your-first-supergraph) in Apollo Studio and then navigate to that graph's Explorer page:
 
 <img
-  src="../img/explorer-new-graph.jpg"
-  class="screenshot"
+  src="../../img/explorer-new-graph.jpg"
+  className="screenshot"
   alt="The default Explorer view for a new supergraph"
 />
 
