--- a/src/content/graphos/basics/explorer/sandbox.mdx
+++ b/src/content/graphos/basics/explorer/sandbox.mdx
@@ -34,7 +34,7 @@ When you open Sandbox, it automatically attempts to connect to a GraphQL server 
 
 <img
   class="screenshot"
-  src="../img/sandbox-url.jpg"
+  src="../../img/sandbox-url.jpg"
   alt="Sandbox URL field"
   width="300"
 />
@@ -55,7 +55,7 @@ From [Sandbox](https://studio.apollographql.com/sandbox/), open the **Schema Dif
 
 <img
   class="screenshot"
-  src="../img/sandbox-diff.jpg"
+  src="../../img/sandbox-diff.jpg"
   alt="Schema diff in Sandbox"
 />
 
@@ -73,7 +73,7 @@ From [Sandbox](https://studio.apollographql.com/sandbox/), open the **Checks** p
 
 <img
   class="screenshot"
-  src="../img/sandbox-checks-select.jpg"
+  src="../../img/sandbox-checks-select.jpg"
   alt="Sandbox select variant for checks"
   width="400"
 />
@@ -82,7 +82,7 @@ Select any accessible organization, graph, and variant to check against and clic
 
 <img
   class="screenshot"
-  src="../img/sandbox-checks-result.jpg"
+  src="../../img/sandbox-checks-result.jpg"
   alt="Sandbox checks result"
   width="400"
 />
@@ -95,7 +95,7 @@ You can run subgraph checks on supergraphs. If you're using Sandbox with a subgr
 
 <img
   class="screenshot"
-  src="../img/subgraph-sandbox-check-prompt.jpg"
+  src="../../img/subgraph-sandbox-check-prompt.jpg"
   alt="Sandbox subgraph check prompt"
   width="500"
 />
@@ -104,7 +104,7 @@ When you click **Run a check**, Sandbox first performs a composition check using
 
 <img
   class="screenshot"
-  src="../img/subgraph-sandbox-one-check-failed.jpg"
+  src="../../img/subgraph-sandbox-one-check-failed.jpg"
   alt="Sandbox subgraph check result"
   width="500"
 />
@@ -148,14 +148,14 @@ The example URL above opens Sandbox with the following initial state:
 
 <img
     class="screenshot"
-    src="../img/sandbox-url-parameters-1.jpg"
+    src="../../img/sandbox-url-parameters-1.jpg"
     alt="Sandbox with endpoint, document, and variables pre-populated"
     width="500"
 />
 
 <img
     class="screenshot"
-    src="../img/sandbox-url-parameters-2.jpg"
+    src="../../img/sandbox-url-parameters-2.jpg"
     alt="Sandbox with headers pre-populated"
     width="500"
 />
@@ -176,7 +176,7 @@ You can embed Sandbox on your own website. This can be useful for interacting wi
 
    <img
      class="screenshot"
-     src="../img/embed-sandbox-modal.jpg"
+     src="../../img/embed-sandbox-modal.jpg"
      alt="Sandbox embed dialog"
      width="600"
    />
