--- a/src/content/graphos/basics/graphs/federated-graphs.mdx
+++ b/src/content/graphos/basics/graphs/federated-graphs.mdx
@@ -59,7 +59,7 @@ You can add a new variant to your existing GraphOS supergraph in the following w
 1. Go to your supergraph's Settings page in Studio and navigate to **This Graph > Variants**:
 
     <img
-      src="../img/federated-graphs/variant-settings.jpg"
+      src="../../img/federated-graphs/variant-settings.jpg"
       class="screenshot"
       alt="Variant settings page in Studio"
     />
@@ -67,7 +67,7 @@ You can add a new variant to your existing GraphOS supergraph in the following w
 2. Click **Add a variant**. The following dialog appears:
 
     <img
-      src="../img/federated-graphs/add-variant-1.jpg"
+      src="../../img/federated-graphs/add-variant-1.jpg"
       class="screenshot"
       alt="Step 1 for adding a variant in Studio"
       width="450"
@@ -76,7 +76,7 @@ You can add a new variant to your existing GraphOS supergraph in the following w
 3. Provide a **Variant Name** and click **Continue**. The next step in the dialog appears:
 
     <img
-      src="../img/federated-graphs/add-variant-2.jpg"
+      src="../../img/federated-graphs/add-variant-2.jpg"
       class="screenshot"
       alt="Step 2 for adding a variant in Studio"
       width="450"
@@ -102,7 +102,7 @@ After you create a [cloud supergraph](./overview/#cloud-supergraphs) (or a new v
 <img
   class="screenshot"
   alt="List of subgraphs for a cloud supergraph in Studio"
-  src="../img/subgraph-list.jpg"
+  src="../../img/subgraph-list.jpg"
   width="600"
 />
 
@@ -122,7 +122,7 @@ You can add your new subgraph to your GraphOS supergraph in the following ways:
 1. Go to your variant's Subgraphs page in Studio:
 
     <img
-      src="../img/federated-graphs/subgraphs-page.jpg"
+      src="../../img/federated-graphs/subgraphs-page.jpg"
       class="screenshot"
       alt="Variant subgraphs page in Studio"
       width="550"
@@ -131,7 +131,7 @@ You can add your new subgraph to your GraphOS supergraph in the following ways:
 2. Click **Add a subgraph**. The following dialog appears:
 
     <img
-      src="../img/federated-graphs/add-subgraph-dialog.jpg"
+      src="../../img/federated-graphs/add-subgraph-dialog.jpg"
       class="screenshot"
       alt="Dialog for adding a subgraph in Studio"
       width="450"
@@ -158,7 +158,7 @@ From your variant's Subgraphs page, you can modify an existing subgraph's routin
     <img
       class="screenshot"
       alt="Menu for additional subgraph options in Studio"
-      src="../img/subgraph-menu.jpg"
+      src="../../img/subgraph-menu.jpg"
       width="450"
     />
 
@@ -197,7 +197,7 @@ You can delete an existing subgraph from a variant of your cloud supergraph. If 
     <img
       class="screenshot"
       alt="Menu for additional subgraph options in Studio"
-      src="../img/subgraph-menu.jpg"
+      src="../../img/subgraph-menu.jpg"
       width="450"
     />
 
@@ -208,7 +208,7 @@ You can delete an existing subgraph from a variant of your cloud supergraph. If 
     <img
       class="screenshot"
       alt="Dialog for confirming deletion of a subgraph"
-      src="../img/delete-subgraph-dialog.jpg"
+      src="../../img/delete-subgraph-dialog.jpg"
       width="500"
     />
 
@@ -221,7 +221,7 @@ The **Schema > Reference** page in Studio displays a table of your supergraph's 
 
 <img
   class="screenshot"
-  src="../img/federated-graphs/schema-reference-type-row-with-subgraph-column.jpg"
+  src="../../img/federated-graphs/schema-reference-type-row-with-subgraph-column.jpg"
   alt="Studio screenshot of Schema Reference, closeup of type row showing subgraph column"
   width="736"
 />
@@ -230,7 +230,7 @@ Clicking the subgraph link for a type or field takes you to the line where it's 
 
 <img
   class="screenshot"
-  src="../img/federated-graphs/type-definition-in-subgraph-sdl.jpg"
+  src="../../img/federated-graphs/type-definition-in-subgraph-sdl.jpg"
   alt="Studio screenshot of Schema SDL, closeup of type definition in subgraph schema"
   width="700"
 />
@@ -239,7 +239,7 @@ If you're using [the `@contact` directive](#contact-info-for-subgraphs) to speci
 
 <img
   class="screenshot"
-  src="../img/federated-graphs/schema-reference-type-row-showing-subgraph-contact-directive-tooltip.jpg"
+  src="../../img/federated-graphs/schema-reference-type-row-showing-subgraph-contact-directive-tooltip.jpg"
   alt="Studio screenshot showing subgraph contact tooltip in Schema Reference subgraph column"
   width="736"
 />
@@ -264,7 +264,7 @@ You can use the `@contact` directive to add your team's contact info to a subgra
 
 <img
   class="screenshot"
-  src="../img/federated-graphs/subgraph-contact-info-on-sdl-closeup.jpg"
+  src="../../img/federated-graphs/subgraph-contact-info-on-sdl-closeup.jpg"
   alt="Studio screenshot showing use of contact directive info as metadata in the Schema SDL view"
   width="424"
 />
@@ -365,7 +365,7 @@ After you publish a subgraph schema that includes the `@contact` directive, the 
 
 <img
   class="screenshot"
-  src="../img/federated-graphs/subgraph-contact-info-on-sdl-closeup.jpg"
+  src="../../img/federated-graphs/subgraph-contact-info-on-sdl-closeup.jpg"
   alt="Studio screenshot showing use of contact directive info as metadata in the Schema SDL view"
   width="424"
 />
@@ -374,7 +374,7 @@ In the **Schema > Reference** tab, you'll also see a contact card when you hover
 
 <img
   class="screenshot"
-  src="../img/federated-graphs/schema-reference-contact-directive-tooltip-closeup.jpg"
+  src="../../img/federated-graphs/schema-reference-contact-directive-tooltip-closeup.jpg"
   alt="Studio screenshot showing subgraph contact tooltip in Schema Reference subgraph column"
   width="388"
 />
@@ -409,7 +409,7 @@ In the **Schema > Reference** tab, tags are shown inline with each type and fiel
 
 <img
   class="screenshot"
-  src="../img/federated-graphs/schema-reference-tag-passthrough.png"
+  src="../../img/federated-graphs/schema-reference-tag-passthrough.png"
   alt="Studio screenshot showing tag directive in Schema Reference"
   width="600"
 />
@@ -418,7 +418,7 @@ Tags are also visible in the Explorer's Documentation tab:
 
 <img
   class="screenshot"
-  src="../img/federated-graphs/explorer-tag-passthrough.png"
+  src="../../img/federated-graphs/explorer-tag-passthrough.png"
   alt="Studio screenshot showing tag directive in Schema Reference"
   width="424"
 />
@@ -437,7 +437,7 @@ If a supergraph's most recent set of subgraph schemas failed to compose, a **BUI
 
 <img
   class="screenshot"
-  src="../img/composition-failed.jpg"
+  src="../../img/composition-failed.jpg"
   alt="Studio screenshot showing a supergraph with a failed composition state"
   width="500"
 />
@@ -446,7 +446,7 @@ You can click this label to view the errors that must be resolved before composi
 
 <img
   class="screenshot"
-  src="../img/composition-error.jpg"
+  src="../../img/composition-error.jpg"
   alt="Studio screenshot showing the composition error modal that is opened by clicking the build failed label"
   width="500"
 />
