--- a/src/content/graphos/basics/graphs/index.mdx
+++ b/src/content/graphos/basics/graphs/index.mdx
@@ -194,7 +194,7 @@ flowchart LR;
     - **If you see this dialog...**
 
         <img
-          src="../img/studio-welcome.jpg"
+          src="../../img/studio-welcome.jpg"
           class="screenshot"
           alt="Welcome message for new Studio orgs"
           width="350"
@@ -205,7 +205,7 @@ flowchart LR;
     - **Otherwise,** find the following notice in the bottom-right corner of the page:
 
         <img
-          src="../img/classic-graph-flow.jpg"
+          src="../../img/classic-graph-flow.jpg"
           class="screenshot"
           alt="Link to classic graph flow"
           width="300"
@@ -217,7 +217,7 @@ flowchart LR;
 
     <img
       className="screenshot"
-      src="../img/graph-creation.jpg"
+      src="../../img/graph-creation.jpg"
       width="350"
       style="margin-bottom: 20px;"
     />
@@ -232,7 +232,7 @@ flowchart LR;
 4. Click **Next**. A dialog like the following appears (the details differ depending on which **Graph Architecture** you're using):
 
     <img
-     src="../img/register-schema-dialog.jpg"
+     src="../../img/register-schema-dialog.jpg"
      class="screenshot"
      alt="Schema registration options"
      width="500"
@@ -254,7 +254,7 @@ Next, you need to publish your graph's schema(s) to Apollo using the Rover CLI. 
 
     <img
       className="screenshot"
-      src="../img/graph-creation.jpg"
+      src="../../img/graph-creation.jpg"
       width="350"
       style="margin-bottom: 20px;"
     />
@@ -269,7 +269,7 @@ Next, you need to publish your graph's schema(s) to Apollo using the Rover CLI. 
 5. Click **Next**. A dialog like the following appears (the details differ depending on which **Graph Architecture** you're using):
 
     <img
-     src="../img/register-schema-dialog.jpg"
+     src="../../img/register-schema-dialog.jpg"
      class="screenshot"
      alt="Schema registration options"
      width="500"
@@ -291,7 +291,7 @@ To distinguish between instances of the same graph running in different environm
 Each of your graph's variants is shown in Apollo Studio:
 
 <img
-  src="../img/graph-variants.jpg"
+  src="../../img/graph-variants.jpg"
   className="screenshot"
   alt="Schema Changelog tab"
   width="400"
