--- a/src/content/graphos/basics/graphs/studio-features.mdx
+++ b/src/content/graphos/basics/graphs/studio-features.mdx
@@ -23,7 +23,7 @@ When a user opens one of your graph's variants in Apollo Studio, its **README pa
 <img
   className="screenshot"
   alt="GraphQL codeblock in README"
-  src="../img/readme-example.jpg"
+  src="../../img/readme-example.jpg"
   width="500"
 />
 
@@ -53,7 +53,7 @@ This renders the code block with buttons you can use to copy an operation or ope
 <img
   className="screenshot"
   alt="GraphQL codeblock in README"
-  src="../img/readme-codeblock.jpg"
+  src="../../img/readme-codeblock.jpg"
   width="300"
 />
 
@@ -89,7 +89,7 @@ The Schema page lists the different kinds of definitions in your schema (objects
 <img
   className="screenshot"
   alt="Schema page list of type definitions in Studio"
-  src="../img/schema-page-list.jpg"
+  src="../../img/schema-page-list.jpg"
   width="300"
 />
 
@@ -98,7 +98,7 @@ Select a kind of definition to view a table of all corresponding types:
 <img
   className="screenshot"
   alt="Schema page list of type definitions in Studio"
-  src="../img/schema-page-table.jpg"
+  src="../../img/schema-page-table.jpg"
 />
 
 Each type definition in the table includes:
@@ -116,7 +116,7 @@ The top of the Schema page provides a **Filter Schema** box you can use to find 
 <img
   className="screenshot"
   alt="Schema page filter box and dropdowns"
-  src="../img/schema-page-filters.jpg"
+  src="../../img/schema-page-filters.jpg"
   width="600"
 />
 
@@ -247,7 +247,7 @@ Include results that take a GraphQL argument with any of the the specified names
 The Changelog page in Studio displays a timeline of changes made to your graph's schema:
 
 <img
-  src="../img/changelog-page.jpg"
+  src="../../img/changelog-page.jpg"
   className="screenshot"
   alt="Schema Changelog tab"
   width="450"
@@ -280,7 +280,7 @@ People outside your organization can't view any _other_ pages for a public varia
 
    <img
      class="screenshot"
-     src="../img/toggle-public-protected-variant.png"
+     src="../../img/toggle-public-protected-variant.png"
      alt="Toggle public variant in Studio"
      width="400"
    />
@@ -293,7 +293,7 @@ After you make a variant public, you can click the variant's **PUBLIC** label at
 
 <img
   className="screenshot"
-  src="../img/public-variant-label.jpg"
+  src="../../img/public-variant-label.jpg"
   alt="Public variant label in Studio"
   width="400"
 />
