--- a/src/content/graphos/basics/graphs/updating.mdx
+++ b/src/content/graphos/basics/graphs/updating.mdx
@@ -54,7 +54,7 @@ The method you use to update your router depends on which type of supergraph you
   {' '}
 
   <img
-    src="../img/router-status.jpg"
+    src="../../img/router-status.jpg"
     class="screenshot"
     width="200"
     alt="Router status for cloud supergraph"
@@ -73,7 +73,7 @@ Whenever you make an operational change to your graph (such as [publishing chang
 1. Go to your variant's Settings page, then find the **General > Build Configuration** section.
 
    <img
-     src="../img/graph-build-configuration.jpg"
+     src="../../img/graph-build-configuration.jpg"
      class="screenshot"
      width="500"
      alt="Build configuration settings in Studio"
@@ -82,7 +82,7 @@ Whenever you make an operational change to your graph (such as [publishing chang
 2. Click **Edit Configuration**. The following dialog appears:
 
    <img
-     src="../img/update-build-configuration.jpg"
+     src="../../img/update-build-configuration.jpg"
      class="screenshot"
      width="600"
      alt="Build configuration dialog in Studio"
