--- a/src/content/graphos/basics/quickstart/self-hosted.mdx
+++ b/src/content/graphos/basics/quickstart/self-hosted.mdx
@@ -68,7 +68,7 @@ After you create your Apollo account, create your first graph in Apollo Studio b
     - **If you see this dialog...**
 
         <img
-          src="../img/studio-welcome.jpg"
+          src="../../img/studio-welcome.jpg"
           class="screenshot"
           alt="Welcome message for new Studio orgs"
           width="350"
@@ -79,7 +79,7 @@ After you create your Apollo account, create your first graph in Apollo Studio b
     - **Otherwise,** find the following notice in the bottom-right corner of the page:
 
         <img
-          src="../img/classic-graph-flow.jpg"
+          src="../../img/classic-graph-flow.jpg"
           class="screenshot"
           alt="Link to classic graph flow"
           width="300"
@@ -91,7 +91,7 @@ After you create your Apollo account, create your first graph in Apollo Studio b
 
     <img
       className="screenshot"
-      src="../img/graph-creation.jpg"
+      src="../../img/graph-creation.jpg"
       width="350"
       style="margin-bottom: 20px;"
     />
@@ -103,7 +103,7 @@ After you create your Apollo account, create your first graph in Apollo Studio b
 4. Click **Next**. A dialog like the following appears:
 
     <img
-     src="../img/register-schema-dialog.jpg"
+     src="../../img/register-schema-dialog.jpg"
      class="screenshot"
      alt="Schema registration options"
      width="500"
@@ -123,7 +123,7 @@ Your graph has been created, and it appears in the **Classic Graphs** section of
 
     <img
       className="screenshot"
-      src="../img/graph-creation.jpg"
+      src="../../img/graph-creation.jpg"
       width="350"
       style="margin-bottom: 20px;"
     />
@@ -135,7 +135,7 @@ Your graph has been created, and it appears in the **Classic Graphs** section of
 5. Click **Next**. A dialog like the following appears:
 
     <img
-     src="../img/register-schema-dialog.jpg"
+     src="../../img/register-schema-dialog.jpg"
      class="screenshot"
      alt="Schema registration options"
      width="500"
@@ -447,7 +447,7 @@ With our subgraph schemas ready, we now can use the Rover CLI's `subgraph publis
 In [Apollo Studio](https://studio.apollographql.com/), click the graph you created back in the first step. Because we haven't published a schema to it yet, the following dialog appears:
 
 <img
-  src="../img/register-schema-dialog.jpg"
+  src="../../img/register-schema-dialog.jpg"
   class="screenshot"
   alt="Schema registration options"
   width="600"
@@ -495,7 +495,7 @@ Each **variant** of a graph represents a different _environment_ where that grap
 
 _After_ you've published a schema to a particular variant, that variant's graph ref is always available at the top of its README page:
 
-<img class="screenshot" alt="Graph ref in Studio" src="../img/studio-graph-ref.jpg" width="300"/>
+<img class="screenshot" alt="Graph ref in Studio" src="../../img/studio-graph-ref.jpg" width="300"/>
 
 </ExpansionPanel>
 
@@ -512,7 +512,7 @@ The supergraph schema for 'docs-example-graph@main' was updated, composed from t
 
 Nice! If you open your graph's details in Studio now, you'll see types and fields from our `locations` subgraph listed on the Schema page:
 
-<img class="screenshot" alt="Locations subgraph schema in Studio" src="../img/qs-studio-schema.jpg" width="300"/>
+<img class="screenshot" alt="Locations subgraph schema in Studio" src="../../img/qs-studio-schema.jpg" width="300"/>
 
 Next, let's do the same thing for our `reviews` subgraph, **again substituting your graph ref**:
 
@@ -583,7 +583,7 @@ In theory, we _could_ use the same API key that we just provided to the `rover s
 
 Now that our router is running, we can quickly open our browser to `localhost:4000` to explore our composed schema in Apollo Sandbox:
 
-<img src="../img/gateway_sandbox.jpg" class="screenshot" alt="Schema view in Apollo Sandbox" width="600" />
+<img src="../../img/gateway_sandbox.jpg" class="screenshot" alt="Schema view in Apollo Sandbox" width="600" />
 
 While we're here, execute some test queries against the supergraph! We'll look at metrics for those test queries in the next step.
 
@@ -594,7 +594,7 @@ Because our router is connected to GraphOS, it automatically collects and report
 Return to [Apollo Studio](https://studio.apollographql.com) and go to your supergraph variant's Operations page, which looks like this:
 
 <img
-  src="../img/operations-quickstart.jpg"
+  src="../../img/operations-quickstart.jpg"
   className="screenshot"
   alt="The Operations page in Studio after executing an operation"
 />
