--- a/src/content/graphos/basics/routing/cloud.mdx
+++ b/src/content/graphos/basics/routing/cloud.mdx
@@ -5,7 +5,7 @@ description: In GraphOS
 
 > **Cloud supergraphs are available to organizations with new Apollo Serverless plans.** They are _not_ available to organizations with an Enterprise plan or a legacy Free or Team plan.
 >
->[See details about plans.](https://www.apollographql.com/pricing/)
+> [See details about plans.](https://www.apollographql.com/pricing/)
 
 When you [create a cloud supergraph](../quickstart/cloud/#2-create-your-first-supergraph) with Apollo Studio, GraphOS automatically provisions and manages a **router** that sits in front of your GraphQL API:
 
@@ -49,9 +49,9 @@ Your router is provisioned _automatically_ whenever you create a cloud supergrap
 When you first create your variant, the router provisioning process can take a few minutes. If this process hasn't completed yet for a particular variant, an **INITIATING ENDPOINT** label is shown at the top of the variant's page in Studio:
 
 <img
-  class="screenshot"
+  className="screenshot"
   alt="Label in Studio indicating a router hasn't finished provisioning"
-  src="../img/initiating-endpoint.jpg"
+  src="../../img/initiating-endpoint.jpg"
   width="500"
 />
 
