--- a/src/content/graphos/basics/routing/self-hosted.mdx
+++ b/src/content/graphos/basics/routing/self-hosted.mdx
@@ -44,36 +44,36 @@ See the instructions for your organization's [plan type](../org/plans/):
 
 1. Go to your organization's **Graphs** tab in [Apollo Studio](https://studio.apollographql.com/).
 
-    - **If you see this dialog...**
+   - **If you see this dialog...**
 
-        <img
-          src="../img/studio-welcome.jpg"
-          class="screenshot"
-          alt="Welcome message for new Studio orgs"
-          width="350"
-        />
+     <img
+       src="../../img/studio-welcome.jpg"
+       className="screenshot"
+       alt="Welcome message for new Studio orgs"
+       width="350"
+     />
 
-        ...then click **Coming from Apollo Odyssey, or want to connect a self-managed router?**
+     ...then click **Coming from Apollo Odyssey, or want to connect a self-managed router?**
 
-    - **Otherwise,** find the following notice in the bottom-right corner of the page:
+   - **Otherwise,** find the following notice in the bottom-right corner of the page:
 
-        <img
-          src="../img/classic-graph-flow.jpg"
-          class="screenshot"
-          alt="Link to classic graph flow"
-          width="300"
-        />
+     <img
+       src="../../img/classic-graph-flow.jpg"
+       className="screenshot"
+       alt="Link to classic graph flow"
+       width="300"
+     />
 
-        Click **Head over to our classic graph flow**.
+     Click **Head over to our classic graph flow**.
 
-    In either case, Studio displays the following dialog for creating a graph:
+   In either case, Studio displays the following dialog for creating a graph:
 
-    <img
-      className="screenshot"
-      src="../img/graph-creation.jpg"
-      width="350"
-      style="margin-bottom: 20px;"
-    />
+   <img
+     className="screenshot"
+     src="../../img/graph-creation.jpg"
+     width="350"
+     style="margin-bottom: 20px;"
+   />
 
 2. Specify an organization and title for your graph.
 
@@ -81,12 +81,12 @@ See the instructions for your organization's [plan type](../org/plans/):
 
 4. Click **Next**. A dialog like the following appears:
 
-    <img
-     src="../img/register-schema-dialog.jpg"
-     class="screenshot"
+   <img
+     src="../../img/register-schema-dialog.jpg"
+     className="screenshot"
      alt="Schema registration options"
      width="500"
-    />
+   />
 
 5. Leave the **Supergraph Pipeline Track** dropdown set to its default value.
 
@@ -100,25 +100,25 @@ Your graph has been created, and it appears in the **Classic Graphs** section of
 
 2. Click **New Graph** in the top right. Studio displays the following dialog:
 
-    <img
-      className="screenshot"
-      src="../img/graph-creation.jpg"
-      width="350"
-      style="margin-bottom: 20px;"
-    />
+   <img
+     className="screenshot"
+     src="../../img/graph-creation.jpg"
+     width="350"
+     style="margin-bottom: 20px;"
+   />
 
 3. Specify an organization and title for your graph.
 
-3. Leave the **Graph Architecture** as **Supergraph (default)**.
+4. Leave the **Graph Architecture** as **Supergraph (default)**.
 
 5. Click **Next**. A dialog like the following appears:
 
-    <img
-     src="../img/register-schema-dialog.jpg"
-     class="screenshot"
+   <img
+     src="../../img/register-schema-dialog.jpg"
+     className="screenshot"
      alt="Schema registration options"
      width="500"
-    />
+   />
 
 6. Leave the **Supergraph Pipeline Track** dropdown set to its default value.
 
