--- a/src/content/graphos/basics/explorer/embed-explorer.mdx
+++ b/src/content/graphos/basics/explorer/embed-explorer.mdx
@@ -49,7 +49,7 @@ For more information, see the [landing page plugin API reference](/apollo-server
 
    <img
      class="screenshot"
-     src="../img/embed-explorer-modal.jpg"
+     src="../../img/embed-explorer-modal.jpg"
      alt="Explorer embed dialog"
      width="600"
    />
@@ -82,7 +82,7 @@ Open the **•••** menu next to an operation and click **Embed this operatio
 
 <img
   class="screenshot"
-  src="../img/explorer-embed-definition-menu.jpg"
+  src="../../img/explorer-embed-definition-menu.jpg"
   alt="Explorer embed link"
   width="300"
 />
@@ -93,7 +93,7 @@ Open the share dropdown in the Explorer and select **Share as embed**:
 
 <img
   class="screenshot"
-  src="../img/explorer-embed-share-dropdown.jpg"
+  src="../../img/explorer-embed-share-dropdown.jpg"
   alt="Explorer embed dropdown"
   width="300"
 />
@@ -106,7 +106,7 @@ Open the share dropdown in the Explorer and select **Share as embed**:
 
 <img
   class="screenshot"
-  src="../img/embed-authorize.jpg"
+  src="../../img/embed-authorize.jpg"
   alt="Explorer authorization screen"
   width="400"
 />
